check assignments for student
